adding cute jest-ctrf-json-reporter

--- a/src/data-collect/package.json
+++ b/src/data-collect/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "eslint": "^9.22.0",
     "jest": "^29.7.0",
+    "jest-ctrf-json-reporter": "^0.0.9",
     "typescript": "^5.8.2"
   }
 }
