--- a/src/analytical-model/package.json
+++ b/src/analytical-model/package.json
@@ -19,6 +19,7 @@
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "jest-ctrf-json-reporter": "^0.0.9",
     "typescript": "^5.8.2"
   }
 }
