--- a/src/data-retrieve/package.json
+++ b/src/data-retrieve/package.json
@@ -19,6 +19,7 @@
     "aws-sdk-client-mock": "^4.1.0",
     "eslint": "^9.22.0",
     "jest": "^29.7.0",
+    "jest-ctrf-json-reporter": "^0.0.9",
     "typescript": "^5.8.2"
   }
 }
